--- a/style.css
+++ b/style.css
@@ -617,21 +617,15 @@ body {
   font-size: 2rem;
   color: var(--second-bg-color);
 }
-/* == */
-/* Always visible title inside card */
-/* .portfolio-box h3 {
-  position: absolute;
-  bottom: 15px;
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 2rem;
-  font-weight: 600;
-  color: #fff;
+.portfolio-layer {
+  pointer-events: auto !important; /* Ensure the layer allows clicks */
+}
+.portfolio-layer a {
+  pointer-events: auto !important; /* Ensure the link is always clickable */
   z-index: 2;
-  transition: opacity 0.4s ease;
-  text-align: center;
-  background: linear-gradient(rgba(0, 0, 0, 0.1), var(--main-color));
-} */
+  position: relative;
+}
+
 .portfolio-box h3 {
   position: absolute;
   bottom: 0; /* stick to bottom */
@@ -660,7 +654,6 @@ body {
   opacity: 0;
 }
 
-/* Contact Section Container */
 /* Contact Section Layout */
 .contact {
   display: flex;
@@ -705,17 +698,6 @@ body {
   text-decoration: none;
 }
 
-/* .contact-social-media a i {
-  width: 45px;
-  height: 45px;
-  font-size: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: var(--second-bg-color);
-  border-radius: 50%;
-  transition: 0.3s ease;
-} */
 .contact-social-media a i {
   width: 45px;
   height: 45px;
@@ -805,19 +787,6 @@ body {
   font-size: 1.4rem;
   color: red;
 }
-/* Submit Button */
-/* .btn {
-  margin-top: 2rem;
-  cursor: pointer;
-  padding: 1rem 2.5rem;
-  border: none;
-  border-radius: 0.8rem;
-  background: var(--main-color);
-  color: #fff;
-  font-size: 1.6rem;
-  font-weight: 600;
-  transition: 0.3s ease;
-} */
 
 .btn:hover {
   background: var(--main-color);
@@ -1179,8 +1148,8 @@ body {
   }
   .navbar a {
     text-decoration: none;
-    /* font-size: 1rem; */
-    font-weight: 500;
+    font-size: 1rem;
+    font-weight: 900;
     transition: 0.3s;
   }
   /* Popup */
@@ -1251,7 +1220,7 @@ body {
 /* Extra small screens */
 @media (max-width: 480px) {
   .calender h3 {
-    font-size: 1.9rem;
+    font-size: 1.5rem;
   }
 }
 
@@ -1345,4 +1314,37 @@ body {
 .contact-social-media a:hover {
   transform: scale(1.2);
   transition: transform 0.3s;
+}
+@media (hover: none) and (pointer: coarse), (max-width: 768px) {
+  .portfolio-box .portfolio-layer {
+    transform: translateY(0) !important;
+  }
+}
+
+/* @media (max-width: 768px) {
+  .portfolio-layer {
+    position: relative;
+  }
+  .portfolio-layer a {
+    position: absolute;
+    top: 2rem; 
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 0;
+  }
+} */
+@media (max-width: 768px) {
+  .portfolio-layer {
+    position: relative;
+  }
+  .portfolio-layer a {
+    position: absolute;
+    top: 12rem; /* 12rem from the top of the overlay */
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 3;
+  }
+  .portfolio-layer h4 {
+    margin-top: -8rem; /* add margin to push down */
+  }
 }
