--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ body {
 
 .education {
   padding: 100px 15px;
-  background: var(--second-bg-color);
+  background: var(--bg-color);
 }
 .education h2 {
   margin-bottom: 5rem;
