--- a/style.css
+++ b/style.css
@@ -96,6 +96,96 @@ body {
   color: var(--text-color);
   display: none;
 }
+/* --------------------------------------------- */
+.box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 0; /* Make sure this is below content */
+  pointer-events: none; /* So it doesn't block clicks */
+}
+
+.home,
+.home-content,
+.home-img {
+  position: relative;
+  z-index: 1; /* Above the animation */
+}
+.box div {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background-color: transparent;
+  border: 6px solid rgba(255, 255, 255, 0.8);
+}
+.box div:nth-child(1) {
+  top: 15%;
+  left: 42%;
+  animation: animate 10s linear infinite;
+}
+.box div:nth-child(2) {
+  top: 60%;
+  left: 50%;
+  animation: animate 7s linear infinite;
+}
+.box div:nth-child(3) {
+  top: 17%;
+  left: 6%;
+  animation: animate 9s linear infinite;
+}
+.box div:nth-child(4) {
+  top: 20%;
+  left: 60%;
+  animation: animate 10s linear infinite;
+}
+.box div:nth-child(5) {
+  top: 67%;
+  left: 4%;
+  animation: animate 6s linear infinite;
+}
+.box div:nth-child(6) {
+  top: 92%;
+  left: 70%;
+  animation: animate 12s linear infinite;
+}
+.box div:nth-child(7) {
+  top: 60%;
+  left: 92%;
+  animation: animate 15s linear infinite;
+}
+.box div:nth-child(8) {
+  top: 32%;
+  left: 25%;
+  animation: animate 16s linear infinite;
+}
+.box div:nth-child(9) {
+  top: 90%;
+  left: 25%;
+  animation: animate 9s linear infinite;
+}
+.box div:nth-child(10) {
+  top: 20%;
+  left: 80%;
+  animation: animate 5s linear infinite;
+}
+.box div:nth-child(11) {
+  top: 75%;
+  left: 38%;
+  animation: animate 6s linear infinite;
+}
+@keyframes animate {
+  0% {
+    transform: scale(0) translateY(0) rotate(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.3) translateY(-90px) rotate(360deg);
+    opacity: 0;
+  }
+}
+/* --------------------------------------------- */
 .home {
   display: flex;
   justify-content: center;
@@ -1368,6 +1458,27 @@ body {
 }
 @media (max-width: 768px) {
   .portfolio .portfolio-box h3 {
+    display: none;
+  }
+  .box div:nth-child(2) {
+    display: none;
+  }
+  .box div:nth-child(5) {
+    top: 55%;
+    left: 2%;
+    animation: animate 6s linear infinite;
+  }
+  .box div:nth-child(11) {
+    top: 92%;
+    left: 85%;
+    animation: animate 5s linear infinite;
+  }
+  .box div:nth-child(6) {
+    top: 92%;
+    left: 1%;
+    animation: animate 12s linear infinite;
+  }
+  .box div:nth-child(9) {
     display: none;
   }
 }
